# hidmet-kde-plasmoid

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md
package/: metadata.json
package/contents/config/: config.qml  main.xml
package/contents/tools/: hidmetUtils.js  logger.js
package/contents/ui/: CompactIconAndTemperature.qml  CompactRepresentation.qml  FullRepresentation.qml  HidmetAtomFeed.qml  HidmetStationModel.qml  StationDelegate.qml  main.qml
package/contents/ui/config/: ConfigGeneral.qml
plasmoid/: metadata.desktop
plasmoid/contents/config/: .directory  config.qml  main.xml
plasmoid/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
plasmoid/contents/ui/code/: utils.js  utils.jsc
plasmoid/contents/ui/config/: ConfigGeneral.qml  ConfigWeatherStation.qml
